--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,10 @@ repositories {
 }
 
 dependencies {
-    groovy group: 'org.codehaus.groovy', name: 'groovy', version: '2.0.5'
+    groovy      group: 'org.codehaus.groovy', name: 'groovy', version: '1.8.+'
+     
+    compile     group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.6'
+    compile     group: 'commons-lang', name: 'commons-lang', version: '2.4'
     
-    compile group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.6'
-    compile group: 'commons-lang'                            , name: 'commons-lang', version: '2.4'
-    
-    testCompile group: 'junit', name: 'junit', version: '4.10'
+    testCompile group: 'junit', name: 'junit', version: '4.+'
 }
-
