--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,19 @@ repositories {
 }
 
 dependencies {
-    groovy      group: 'org.codehaus.groovy', name: 'groovy', version: '1.8.+'
+    compile     group: 'org.codehaus.groovy', name: 'groovy', version: '2.1.+'
      
     compile     group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.6'
     compile     group: 'commons-lang', name: 'commons-lang', version: '2.4'
     
     testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '0.7-groovy-2.0'
+}
+
+test {
+    // note: gradle -Dtest.single=GroossSpec test
+    testLogging {
+        // Show that tests are run in the command-line output
+        events 'started', 'passed'
+    }
 }
