--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,9 @@ repositories {
 dependencies {
     compile     group: 'org.codehaus.groovy', name: 'groovy', version: '2.1.+'
      
-    compile     group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.6'
+    compile     group: 'org.codehaus.groovy.modules.http-builder', name: 'http-builder', version: '0.7.1'
     compile     group: 'commons-lang', name: 'commons-lang', version: '2.4'
+    compile     group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.2.6'
     
     testCompile group: 'junit', name: 'junit', version: '4.+'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '0.7-groovy-2.0'
